--- a/Home.html
+++ b/Home.html
@@ -133,7 +133,7 @@
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
-                  <img src="images/Potential_engineer.png" alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="1350" data-image-height="520">
+                  <img src="images/Potential_engineer.png" alt="Potential Engineer Surat" Title="POtential Engineer Surat" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="1350" data-image-height="520">
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
