--- a/About-us.html
+++ b/About-us.html
@@ -65,10 +65,10 @@
 <meta property="og:url" content="https://siddhu1999.github.io/potentialengineers/">
 <meta property="og:description" content="We Provide Chartered Engineering Services All Around India">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png">
+<meta property="og:image" content="https://siddhu1999.github.io/potentialengineers/images/Potential_engineer.png">
 
 	<meta name="twitter:url" content="https://siddhu1999.github.io/potentialengineers/">
-	<meta name="twitter:image" content="https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png">
+	<meta name="twitter:image" content="https://siddhu1999.github.io/potentialengineers/images/Potential_engineer.png">
 	<meta name="twitter:description" content="We Provide Chartered Engineering Services All Around India">
 	<meta name="twitter:domain" content="https://siddhu1999.github.io/potentialengineers/">
 	<meta name="theme-color" content="#e5e5e5">
@@ -78,7 +78,7 @@
   "@context" : "http://schema.org",
   "@type" : "LocalBusiness",
   "name" : "Potential Engineer Surat",
-  "image" : "https://siddhu1999.github.io/potentialengineers/images/R9c01cfa1bee64149363b5d4877fb8573.png",
+  "image" : "https://siddhu1999.github.io/potentialengineers/images/Potential_engineer.png",
   "address" : {
     "@type" : "PostalAddress",
     "streetAddress" : "7,shiv shakti row house,near saraswati school",
@@ -90,7 +90,7 @@
 }
 </script></head>
   <body class="u-body"><header class="u-align-center-sm u-align-center-xs u-clearfix u-grey-10 u-header u-header" id="sec-0ca3"><div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="zoomIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="Left">
+        <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" target="_blank" title="Whatsapp" href="https://bit.ly/37tKTZ5"><span class="u-icon u-icon-circle u-social-icon u-social-whatsapp u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-d52c"></use></svg><svg class="u-svg-content" id="svg-d52c" style="color: rgb(0, 230, 118);"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M83.8,28.3C77.2,21.7,68.4,18,59,18c-19.3,0-35.1,15.7-35.1,35.1c0,6.2,1.6,12.2,4.7,17.5l-5,18.2L42.2,84
 	c5.1,2.8,10.9,4.3,16.8,4.3h0l0,0c19.3,0,35.1-15.7,35.1-35.1C94.1,43.8,90.5,35,83.8,28.3 M59,82.3L59,82.3
 	c-5.2,0-10.4-1.4-14.9-4.1l-1.1-0.6l-11,2.9L35,69.8l-0.7-1.1c-2.9-4.6-4.5-10-4.5-15.5C29.8,37,42.9,24,59,24
@@ -148,7 +148,7 @@
         <img src="images/Potential_engineer.png" alt="Potential Engineer Surat" Title="Potential Engineer Surat" class="u-image u-image-default u-image-1" data-image-width="1350" data-image-height="520">
         <div class="u-container-style u-group u-group-1">
           <div class="u-container-layout u-valign-middle-xl u-container-layout-1">
-            <h3 class="u-custom-font u-font-raleway u-text u-text-body-alt-color u-text-1">about us</h3>
+            <h3 class="u-custom-font u-font-raleway u-text u-text-body-alt-color u-text-1">About us</h3>
           </div>
         </div>
         <div class="u-container-style u-expanded-width-xs u-group u-group-2">
