--- a/Home.html
+++ b/Home.html
@@ -141,7 +141,7 @@
               </div>
               <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-valign-bottom-xs u-container-layout-2">
-                  <h1 class="u-custom-font u-text u-text-palette-1-light-1 u-text-1">Chartered Engineer | Potential Engineers Surat</h1>
+                  <h1 class="u-custom-font u-text u-text-palette-1-light-1 u-text-1">Chartered Engineer | Potential Engineer Surat</h1>
                   <h2 class="u-text u-text-palette-1-light-1 u-text-2">We Provide Chartered Engineering,Certification Services &amp; Valuation Services In India<br>
                   </h2>
                   <a href="Home.html#sec-1841" data-page-id="501527553" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Know More</a>
