--- a/Home.html
+++ b/Home.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
-	  <link rel="canonical" href="https://siddhu1999.github.io/potentialengineers/index.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="chartered engineer in surat,chartered engineer for certification in surat,chartered engineer and valuer in surat,chartered engineer india,chartered engineer and professional engineer in surat,find a chartered engineer in surat,chartered engineer for valuation in surat,chartered engineer india,chartered engineer in vadodara,chartered engineer in rajkot,chartered engineer license in surat,chartered engineer license india,chartered mechanical engineer in surat,chartered engineer in mumbai,chartered engineer valuer in surat,chartered engineer work in india,chartered engineer certification in surat,potential engineer in surat,machine valuer in surat,chartered engineer valuation certificate in surat,chartered engineer certificate for second hand machinery in surat,can chartered engineer certify documents in surat,chartered engineer certificate for customs in Surat,chartered engineer certificate for installation of machinery in surat,approved valuer in surat
 ">
-    <meta name="description" content="Potential Engineer in Gujarat and Maharashtra provide Chartered Engineer services for EPCG,Valuation Certification and Installation certificate,plant performance certificate,certificate for custom clearance,subsidy for plant and machinary and More. Contact us now ">
+    <meta name="description" content="Chartered Engineer in Surat, Potential Engineer provides Chartered Engineer services for EPCG,Valuation Certification and Installation certificate,plant performance certificate,certificate for custom clearance and more ">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Chartered Engineer and Approved Valuer | Potential Engineers Surat</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -43,12 +42,6 @@
     ".replace(/gascript/g, 'script'));
     }
     </script><meta http-equiv='content-language' content='en-in'>
-<meta property="og:title" content="Potential Engineer Surat | Chartered Engineer Services in Gujarat and Maharashtra">
-<meta property="og:site_name" content="Potential Engineers | Chartered Engineer">
-<meta property="og:url" content="https://siddhu1999.github.io/potentialengineers/">
-<meta property="og:description" content="We Provide Chartered Engineering Services All Around India">
-<meta property="og:type" content="website">
-<meta property="og:image" content="https://siddhu1999.github.io/potentialengineers/images/Potential_engineer.png">
 
 	<meta name="twitter:url" content="https://siddhu1999.github.io/potentialengineers/">
 	<meta name="twitter:image" content="https://siddhu1999.github.io/potentialengineers/images/Potential_engineer.png">
