--- a/Contact-us.html
+++ b/Contact-us.html
@@ -7,7 +7,7 @@
 chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer license in surat,chartered engineer license india,chartered engineer mechanical,chartered engineer mumbai">
     <meta name="description" content="We proivde Chartered engineer certification and valuation services all over Gujarat and Maharashtra, contact us for more information">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Contact Chartered Engineer in Surat | Potential Engineers India</title>
+    <title>Contact Chartered Engineer in Surat | Potential Engineers Surat</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Contact-us.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
