--- a/Contact-us.html
+++ b/Contact-us.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="chartered engineer contact number,chartered engineer certification in surat,chartered engineer in surat,chartered engineer surat,chartered engineering surat,chartered engineer in surat,chartered engineer in ahmedabad,chartered engineer and valuer in surat,chartered engineer gujarat,chartered engineer and professional engineer in surat,find a chartered engineer in surat,chartered engineer for valuation in surat,
 chartered engineer india,chartered engineer in vadodara,chartered engineer in bharuch,chartered engineer in rajkot,chartered engineer license in surat,chartered engineer license india,chartered engineer mechanical,chartered engineer mumbai">
-    <meta name="description" content="We proivde Chartered engineer certification and valuation services all over Gujarat and Maharashtra, contact us for more information">
+    <meta name="description" content="I am Approved Chartered Engineer and Valuer by IOV, Contact now to get your certification now">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Contact Chartered Engineer in Surat | Potential Engineers Surat</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
